# pymol-open-source-setup

./: .gitignore  404.html  LICENSE  README.md  about.html  index.html  install.html  install_linux.html  install_macos.html  install_windows.html  manual.html  pyproject.toml  sitemap.xml
.github/workflows/: build_app.yaml
automations/: build_exe.py  build_inno_setup.py  const.py  dev_env.py  my_automator.py
docs/website/: mkdocs.yml
docs/website/docs/: about.md  index.md  install.md  install_linux.md  install_macos.md  install_windows.md  manual.md
docs/website/material/overrides/: home.html  main-styles.html  main.html
edited/pymol/: startup_wrapper.py
os_specific/linux/: dev_requirements.txt  open-source-pymol.desktop  setup_build_exe.py
os_specific/macos/: convert_to_icns.zsh  requirements.txt  setup_build_exe.py
os_specific/windows/: requirements.txt  setup_build_exe.py
os_specific/windows/inno_setup/: LICENSE.txt  setup.iss  setup_x64.iss  setup_x86.iss
stylesheets/: extra.css
